fix footer spacing

--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -59,8 +59,8 @@
   color: #fff;
   display: flex;
   font-size: 12px;
-  height: 60px;
   overflow: hidden;
+  padding: 15px 0;
   position: absolute;
   width: 100%;
 }
@@ -79,11 +79,6 @@
     padding: 0 5%;
     width: 100%;
   }
-}
-
-.social {
-  display: flex;
-  align-items: center;
 }
 
 .footer-wrapper p a {
@@ -108,6 +103,7 @@
 
 .copyright, .designer {
   display: none;
+  visibility: hidden;
 }
 
 .designer a {
@@ -121,5 +117,6 @@
 @media (min-width: $tablet-bp) {
   .copyright, .designer {
     display: block;
+    visibility: visible;
   }
 }
