--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
   // margin-top: 80px;
   padding: 80px 0;
-  width: 100%;
+  width: 90%;
 }
 
 @media (min-width: $laptop-bp) {
